--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  html: ^0.15.6
   # rive: ^0.11.4 # google_mlkit_image_labeling: ^0.9.0
 
 dev_dependencies:
